back to my code with some fixing